--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -10,15 +10,15 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">New cases</div>
-      <div class="govuk-body govuk-!-font-weight-bold"><%= link_to "#{@new_cases_count}", new_caseload_path, class:"govuk-link"%></a></div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24"><%= link_to "#{@new_cases_count}", new_caseload_path, class:"govuk-link"%></a></div>
     </div>
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">Working pattern</div>
-      <div class="govuk-body govuk-!-font-weight-bold"><%= working_pattern_name(@pom.working_pattern) %></div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24"><%= working_pattern_name(@pom.working_pattern) %></div>
     </div>
     <div class="govuk-grid-column-one-quarter">
       <div class="govuk-body">Status</div>
-      <div class="govuk-body govuk-!-font-weight-bold"><%= @pom.status.capitalize %></div>
+      <div class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24"><%= @pom.status.capitalize %></div>
     </div>
   </div>
 
