--- a/app/views/prisoners/_prisoner_information.html.erb
+++ b/app/views/prisoners/_prisoner_information.html.erb
@@ -6,15 +6,33 @@
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell govuk-!-width-one-half">Current responsibility</td>
-      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"></td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+        <%= case_owner_label(@prisoner) %>
+      </td>
     </tr>
+  <!-- PENDING DATA
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Early allocation eligibility</td>
       <td class="govuk-table__cell table_cell__left_align"></td>
     </tr>
+  -->
+  <!-- PENDING DATA
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">COM responsibility handover deadline</td>
       <td class="govuk-table__cell table_cell__left_align"></td>
+    </tr>
+  -->
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell govuk-!-width-one-half">Last known address in Wales</td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+        <% if @prisoner.omicable %> Yes <% else %> No <% end %>
+      </td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell govuk-!-width-one-half">Service provider</td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
+        <%= service_provider_label(@prisoner.case_allocation) %>
+      </td>
     </tr>
   </tbody>
 </table>
