Remove unnecessary method
Removed method to display offender name by last_name followed by
first_name as there is already a method that does this.

Instead of passing the history attribute in the backlink to the
allocation information page, we now use the offender (prisoner)
attribute.

--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -1,6 +1,6 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => allocation_path(@history.first.nomis_offender_id) } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => allocation_path(@prisoner.offender_no) } %>
 
-<h1 class="govuk-heading-l"><%= @prisoner_name %></h1>
+<h1 class="govuk-heading-l"><%= @prisoner.full_name %></h1>
 
 <% @history.grouped_by_prison do |prison, allocations| %>
   <div class="govuk-grid-row">
