--- a/app/views/prisoners/show.html.erb
+++ b/app/views/prisoners/show.html.erb
@@ -30,10 +30,8 @@
         <h3 class="govuk-heading-m"><%= format_date(@prisoner.earliest_release_date) %></h3>
       </div>
       <div class="govuk-grid-column-one-third">
-      <!-- PENDING DATA
         <span class="govuk-body">Category</span>
-        <h3 class="govuk-heading-m">N/A</h3>
-      -->
+        <h3 class="govuk-heading-m" id="category-code"><%= @prisoner.category_code %></h3>
       </div>
       <div class="govuk-grid-column-one-third">
         <span class="govuk-body">Tier calculation</span>
