--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -15,8 +15,7 @@
                 <%= link_to(allocation.primary_pom_name.titlecase, pom_path(allocation.primary_pom_nomis_id)) %>
                 <br/>
                 Tier: <%= allocation.allocated_at_tier %>
-              </p>
-              <p class="time"><%= format_date_long(allocation.primary_pom_allocated_at) %>
+              <p class="time"><%= format_date_long(allocation.updated_at) %>
                 by <%= allocation.created_by_name.titlecase %></p>
             </li>
           <% end %>
