This commit removes the method to group the allocation list by descending order, instead the functionality is moved into the offender_allocation_history method.

--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -8,7 +8,7 @@
       <div class="timeline">
         <h2 class="govuk-heading-m"><%= prison_title(prison) %></h2>
         <ul>
-          <% allocations.group_by_descending_date(allocations).each do |allocation| %>
+          <% allocations.each do |allocation| %>
             <% if allocation.event == 'allocate_primary_pom' %>
               <%= render :partial => "allocate_primary_pom", :locals => { allocation: allocation } %>
             <% elsif allocation.event == 'reallocate_primary_pom' %>
