The allocation history page has been updated to include de-allocate primary pom events. If the event is triggered by offender movement then the page displays that the offender was transferred.

--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -13,6 +13,8 @@
               <%= render :partial => "allocate_primary_pom", :locals => { allocation: allocation } %>
             <% elsif allocation.event == 'reallocate_primary_pom' %>
               <%= render :partial => "reallocate_primary_pom", :locals => { allocation: allocation } %>
+            <% elsif allocation.event == 'deallocate_primary_pom' %>
+              <%= render :partial => "deallocate_primary_pom", :locals => { allocation: allocation } %>
             <% end %>
           <% end %>
         </ul>
