--- a/app/views/allocations/_deallocate_primary_pom.html.erb
+++ b/app/views/allocations/_deallocate_primary_pom.html.erb
@@ -4,5 +4,9 @@
         (transfer)
     <% end %>
   </h2>
+  <p>
+  &nbsp;
+  <br/>
+&nbsp;
   <p class="time"><%= format_date_long(allocation.updated_at) %></p>
 </li>
