--- a/app/views/prisoners/_prison_allocation.html.erb
+++ b/app/views/prisoners/_prison_allocation.html.erb
@@ -14,7 +14,7 @@
       <td class="govuk-table__cell">POM</td>
       <td class="govuk-table__cell table_cell__left_align">
         <% if @allocation %>
-          <%= @allocation.primary_pom_name.titlecase %>
+          <%= @allocation.primary_pom_name.titleize %>
         <% end %>
       </td>
     </tr>
