--- a/app/views/shared/_allocation_history.html.erb
+++ b/app/views/shared/_allocation_history.html.erb
@@ -8,12 +8,12 @@
             <li class="action_needed">
               <h2 class="govuk-heading-s">Prisoner allocation</h2>
               <p>Prisoner allocated to
-                <%= link_to(allocation.primary_pom_name.titlecase, pom_path(allocation.primary_pom_nomis_id)) %>
+                <%= link_to(allocation.primary_pom_name.titleize, pom_path(allocation.primary_pom_nomis_id)) %>
                 <br/>
                 Tier: <%= allocation.allocated_at_tier %>
               </p>
               <p class="time"><%= format_date_long(allocation.primary_pom_allocated_at) %>
-                by <%= allocation.created_by_name.titlecase %></p>
+                by <%= allocation.created_by_name.titleize %></p>
             </li>
           <% end %>
         </ul>
