Refine offender movement type
At present when we run the 'deallocate_offender' method within
AllocationVersion we only state that an offender has moved.  However,
this could mean that they were either transferred, or released.  By
tweaking the event trigger to be more specific this will assist us when
displaying the allocation history.

--- a/app/views/allocations/_deallocate_primary_pom.html.erb
+++ b/app/views/allocations/_deallocate_primary_pom.html.erb
@@ -1,6 +1,6 @@
 <li class="action_needed">
   <h2 class="govuk-heading-s">Prisoner unallocated
-    <% if allocation.event_trigger == 'offender_movement' %>
+    <% if allocation.event_trigger == 'offender_transferred' %>
         (transfer)
     <% end %>
   </h2>
