Additional spec for prisoner profile page
One of the new flows is that a POM can also view the prisoner profile
page for any of their allocated offenders.  An additional feature spec
has been added to test this flow is possible from the POM caseload
pages.

I've also updated the caseload new & index views to make use of the
'each_with_index' method so we can more appropriately, and easily, track
down specific rows within the tables displayed on these pages.

--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -36,8 +36,8 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @allocations.each do |allocation, sentence| %>
-      <tr class="govuk-table__row">
+    <% @allocations.each_with_index do |(allocation, sentence), i| %>
+      <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
         <td aria-label="Release date" class="govuk-table__cell "><%= format_date(sentence.earliest_release_date) %></td>
