Add a CRN field to the offender.
As we will soon be creating case information data for offenders, this PR
allows that CaseInformation to contain the CRN (delius ID).  This is
then displayed on the prisoner profile page.

If the data is not available, the CRN field is shown as N/A.

--- a/app/views/prisoners/show.html.erb
+++ b/app/views/prisoners/show.html.erb
@@ -14,10 +14,8 @@
         <h3 class="govuk-heading-m"><%= @prisoner.offender_no %></h3>
       </div>
       <div class="govuk-grid-column-one-third">
-      <!-- PENDING DATA
         <span class="govuk-body">CRN number</span>
-        <h3 class="govuk-heading-m">N/A</h3>
-      -->
+        <h3 class="govuk-heading-m"><%= @prisoner.crn || "N/A" %></h3>
       </div>
       <div class="govuk-grid-column-one-third">
         <span class="govuk-body">Date of birth</span>
