--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,7 +9,7 @@
           You can use this form to ask a question, report a problem or suggest an improvement.
         </label>
         <span id="more-detail-hint" class="govuk-hint">
-          Do not include personal or financial information, like your National Insurance number or credit card details.
+          Do not include sensitive information, such as a prisoners name or date of birth.
         </span>
         <% if @contact.present? %>
           <% if @contact.errors[:more_detail].present? %>
@@ -22,7 +22,7 @@
         <textarea class="govuk-textarea" id="more-detail" name="more_detail" rows="10" aria-describedby="more-detail-hint"></textarea>
       </div>
 
-      <button class="gem-c-button govuk-button" type="submit">Submit</button>
+      <button class="govuk-button" type="submit">Submit</button>
     <% end %>
   </div>
 </div>
