--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,7 +9,7 @@
           You can use this form to ask a question, report a problem or suggest an improvement.
         </label>
         <span id="more-detail-hint" class="govuk-hint">
-          Do not include sensitive information, such as a prisoners name or date of birth.
+          Do not include sensitive information, such as a prisoner's name or date of birth.
         </span>
         <% if @contact.present? %>
           <% if @contact.errors[:more_detail].present? %>
