refactor URLs to include selected prison

--- a/app/views/layouts/_prison_switcher.html.erb
+++ b/app/views/layouts/_prison_switcher.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-phase-banner govuk-width-container app-site-
   width-container govuk-!-padding-bottom-0 prison-switcher">
       <h2 class="govuk-heading-m govuk-!-margin-0 govuk-!-padding-0">
-        <%= prison_title(active_caseload) %>
+        <%= prison_title(@prison) %>
       </h2>
       <a href="<%= prisons_path %>">Switch prison</a>
   </div>
