--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -40,9 +40,9 @@
         <td aria-label="Allocation date" class="govuk-table__cell"><%= format_date(offender.allocation_date) %></td>
         <td aria-label="Action" class="govuk-table__cell ">
           <% if Flipflop.link_allocation_info? %>
-            <%= link_to "View", allocation_path(nomis_offender_id: offender.offender_no) %>
+            <%= link_to "View", prison_allocation_path(@prison, nomis_offender_id: offender.offender_no) %>
           <% else %>
-            <%= link_to "Reallocate", edit_allocation_path(offender.offender_no) %>
+            <%= link_to "Reallocate", edit_prison_allocation_path(@prison, offender.offender_no) %>
           <% end %>
         </td>
       </tr>
