--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -61,7 +61,7 @@
           <%= offender.awaiting_allocation_for %> days
         </td>
         <td aria-label="Action" class="govuk-table__cell ">
-          <a href="<%= new_allocation_path(offender.offender_no) %>">Allocate</a>
+          <a href="<%= new_prison_allocation_path(@prison, offender.offender_no) %>">Allocate</a>
         </td>
       </tr>
     <% end %>
