--- a/app/views/case_information/edit.html.erb
+++ b/app/views/case_information/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => new_allocation_path(@prisoner.offender_no) } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => new_prison_allocation_path(@prison, @prisoner.offender_no) } %>
 
 <% if @case_info.errors.count > 0 %>
   <%= render :partial => "/shared/validation_errors", :locals => { :errors => @case_info.errors } %>
@@ -9,6 +9,6 @@
 <p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
 
 <%= render :partial => "form", :locals => {
-      :action => case_information_path(),
+      :action => prison_case_information_path(@prison),
       :method => :put,
       :save_text => "Update" } %>
