--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -32,7 +32,7 @@
         <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
         <% if Flipflop.prisoner_profile? %>
           <td aria-label="Action" class="govuk-table__cell ">
-            <%= link_to('View', prisoner_show_path(allocation.nomis_offender_id), class: "govuk-link" ) %>
+            <%= link_to('View', prison_prisoner_show_path(@prison, allocation.nomis_offender_id), class: "govuk-link" ) %>
           </td>
         <% end %>
       </tr>
