--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,7 +14,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "See all allocated prisoners", summary_allocated_path, class:"govuk-link" %>
+        <%= link_to "See all allocated prisoners", prison_summary_allocated_path(@prison), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">All prisoners who have been allocated to a Prison Offender Manager.</p>
     </div>
@@ -22,7 +22,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "Make new allocations", summary_unallocated_path, class:"govuk-link" %>
+        <%= link_to "Make new allocations", prison_summary_unallocated_path(@prison), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Prisoners who need to be allocated to a Prison Offender Manager.</p>
     </div>
@@ -30,7 +30,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "Update case information", summary_pending_path, class:"govuk-link" %>
+        <%= link_to "Update case information", prison_summary_pending_path(@prison), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Prisoners with missing case information. This needs to be updated before they can be allocated.</p>
     </div>
@@ -44,7 +44,7 @@
     <div class="govuk-grid-column-one-third">
       <div class="wrapper">
         <h1 class="govuk-heading-s">
-          <%= link_to "See your caseload", caseload_index_path, class:"govuk-link" %>
+          <%= link_to "See your caseload", prison_caseload_index_path(@prison), class:"govuk-link" %>
         </h1>
         <p class="govuk-body">All prisoners allocated to you.</p>
       </div>
@@ -52,7 +52,7 @@
     <div class="govuk-grid-column-one-third">
       <div class="wrapper">
         <h1 class="govuk-heading-s">
-          <%= link_to "See new allocations", new_caseload_path, class:"govuk-link" %>
+          <%= link_to "See new allocations", new_prison_caseload_path(@prison), class:"govuk-link" %>
         </h1>
         <p class="govuk-body">Prisoners allocated to you in the last seven days.</p>
       </div>
@@ -66,7 +66,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "View all offender managers", poms_path(), class:"govuk-link" %>
+        <%= link_to "View all offender managers", prison_poms_path(@prison), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Check and edit availability of offender managers.</p>
     </div>
