--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -50,7 +50,7 @@
           <% end %>
         </td>
         <td aria-label="Waiting" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
-        <td aria-label="Action" class="govuk-table__cell "><%= link_to "Edit", new_case_information_path(offender.offender_no) %></td>
+        <td aria-label="Action" class="govuk-table__cell "><%= link_to "Edit", new_prison_case_information_path(@prison, offender.offender_no) %></td>
       </tr>
     <% end %>
     </tbody>
