fixed up top-level dashboard link with exclusions for errors and contact/help pages

--- a/app/views/layouts/_prison_switcher.html.erb
+++ b/app/views/layouts/_prison_switcher.html.erb
@@ -4,6 +4,6 @@
       <h2 class="govuk-heading-m govuk-!-margin-0 govuk-!-padding-0">
         <%= prison_title(@prison) %>
       </h2>
-      <a href="<%= prisons_path %>">Switch prison</a>
+      <a href="<%= prison_prisons_path(@prison) %>">Switch prison</a>
   </div>
 <% end %>
