sort and search caseload page

--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -22,30 +22,54 @@
     </div>
   </div>
 
+  <div class="govuk-!-margin-bottom-6 govuk-!-margin-top-6">
+    <%= render "poms/search_box" %>
+  </div>
+
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Prisoner name</th>
+      <th class="govuk-table__header" scope="col">
+        <a href="<%= sort_link('last_name') %>">
+          Prisoner name
+        </a>
+        <%= sort_arrow('last_name') %>
+      </th>
       <th class="govuk-table__header" scope="col">Prisoner number</th>
-      <th class="govuk-table__header" scope="col">Earliest release<br/> date</th>
-      <th class="govuk-table__header" scope="col">Allocation<br/>date</th>
-      <th class="govuk-table__header" scope="col">Role</th>
+      <th class="govuk-table__header" scope="col">
+        <a href="<%= sort_link('earliest_release_date') %>">
+          Earliest release<br/> date
+        </a>
+        <%= sort_arrow('earliest_release_date') %>
+      </th>
+      <th class="govuk-table__header" scope="col">
+        <a href="<%= sort_link('primary_pom_allocated_at') %>">
+          Allocation<br/>date
+        </a>
+        <%= sort_arrow('primary_pom_allocated_at') %>
+      </th>
+      <th class="govuk-table__header" scope="col">
+        <a href="<%= sort_link('responsibility') %>">
+          Role
+        </a>
+        <%= sort_arrow('responsibility') %>
+      </th>
       <% if Flipflop.prisoner_profile? %>
         <th class="govuk-table__header" scope="col">Action</th>
       <% end %>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @allocations.each_with_index do |(allocation, sentence), i| %>
+    <% @allocations.each_with_index do |offender, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
-        <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(sentence.earliest_release_date) %></td>
-        <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
-        <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
+        <td aria-label="Prisoner name" class="govuk-table__cell "><%= highlight(offender.full_name, @q) %></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell "><%= highlight(offender.nomis_offender_id, @q) %></td>
+        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(offender.earliest_release_date) %></td>
+        <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(offender.primary_pom_allocated_at) %></td>
+        <td aria-label="Role" class="govuk-table__cell "><%= offender.responsibility %></td>
         <% if Flipflop.prisoner_profile? %>
           <td aria-label="Action" class="govuk-table__cell ">
-            <%= link_to('View', prison_prisoner_show_path(@prison, allocation.nomis_offender_id), class: "govuk-link" ) %>
+            <%= link_to('View', prison_prisoner_show_path(@prison, offender.nomis_offender_id), class: "govuk-link" ) %>
           </td>
         <% end %>
       </tr>
