--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -22,12 +22,12 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @new_cases.each_with_index do |(allocation, sentence), i| %>
+    <% @new_cases.each_with_index do |allocation, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
-        <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
+        <td aria-label="Prisoner name" class="govuk-table__cell "><%= allocation.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
-        <td aria-label="Arrival date" class="govuk-table__cell "><%= format_date(sentence.sentence_start_date) %></td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(sentence.earliest_release_date) %></td>
+        <td aria-label="Arrival date" class="govuk-table__cell "><%= format_date(allocation.sentence_start_date) %></td>
+        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(allocation.earliest_release_date) %></td>
         <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
         <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
         <% if Flipflop.prisoner_profile? %>
