--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -11,11 +11,11 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    <% @allocations.each_with_index do |(allocation, sentence), i| %>
+    <% allocations.each_with_index do |allocation, i| %>
     <tr class="govuk-table__row pom_cases_row_<%= i %>">
-      <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
+      <td aria-label="Prisoner name" class="govuk-table__cell "><%= allocation.full_name %></td>
       <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
-      <td aria-label="Earliest release date" class="govuk-table__cell "><%= format_date(sentence.earliest_release_date) %></td>
+      <td aria-label="Earliest release date" class="govuk-table__cell "><%= format_date(allocation.earliest_release_date) %></td>
       <td aria-label="Tier" class="govuk-table__cell "><%= allocation.allocated_at_tier %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
       <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
