--- a/app/views/poms/show.html.erb
+++ b/app/views/poms/show.html.erb
@@ -24,6 +24,6 @@
     <h2 class="govuk-heading-l">Caseload</h2>
   </div>
   <div class="govuk-grid-column-full">
-    <%= render 'caseload' %>
+    <%= render 'caseload', allocations: @allocations %>
   </div>
 </div>
