--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -85,31 +85,31 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Conditional release date</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.sentence.conditional_release_date, replacement: 'N/A') %>
+        <%= format_date(@prisoner.conditional_release_date, replacement: 'N/A') %>
       </td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Automatic release date</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.sentence.automatic_release_date, replacement: 'N/A') %>
+        <%= format_date(@prisoner.automatic_release_date, replacement: 'N/A') %>
       </td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Parole eligibility</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.sentence.parole_eligibility_date, replacement: 'N/A') %>
+        <%= format_date(@prisoner.parole_eligibility_date, replacement: 'N/A') %>
       </td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Home detention curfew eligibility</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.sentence.home_detention_curfew_eligibility_date, replacement: 'N/A') %>
+        <%= format_date(@prisoner.home_detention_curfew_eligibility_date, replacement: 'N/A') %>
       </td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Tariff date</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= format_date(@prisoner.sentence.tariff_date, replacement: 'N/A') %>
+        <%= format_date(@prisoner.tariff_date, replacement: 'N/A') %>
       </td>
     </tr>
     </tbody>
