draft guide content

--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,7 +1,27 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Start using the allocations service to assign prison offender managers 
+</h1>
 
 <div class="govuk-grid-row dashboard-row">
   <div class="govuk-grid-column-two-thirds">
-  Help
+ 
+<p> You will be able to allocate prison offender managers to prisoners using the new allocations service. </p>
+
+<p> There are a few tasks that need to be completed before you can start making allocations. These need to be completed in the order that they are described in this guide. </p>
+
+<p> You will need to work together to complete the set-up. </p>
+
+(LINKS?) 
+Task 1: Senior Probation Officer (SPO) 
+Task 2: Local System Administrator 
+Task 3: Senior Probation Officer (SPO) / Case admin 
+Task 4: Senior Probation Officer (SPO) / Case admin 
+Task 5: Senior Probation Officer (SPO) 
+
+
+<p> When you are set up, use Firefox to sign in to the service using your NOMIS ID and password at: <a href="https://moic.service.justice.gov.uk"> https://moic.service.justice.gov.uk </a>
+
+
+<p> You can download and print a copy of this guide: <a href="xx">Start using the allocations service (pdf, xxkb) </a>
+
   </div>
 </div>
