--- a/app/views/pages/help_step2.html.erb
+++ b/app/views/pages/help_step2.html.erb
@@ -1,1 +1,42 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help - Step 2</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">LSA task: Set up POMs in NOMIS</h1>
+
+<p> This task can't be started until task 1 has been completed. </p>
+
+<h2> a) Make sure POMs have the right ‘roles’ assigned in NOMIS </h2>
+
+<p>All POMs need to have a new staff role added in NOMIS. This will add them to the list of POMs in the new service.</p>
+
+<img src="image 1"> 
+
+
+<ul> 
+	<li>Go to ‘Utilities’ then ‘User/system security’ then ‘Maintain staff member agency location activity’</li> 
+	<li>Enter the staff member’s name, then click the blue arrow by their name</li> 
+	<li>Search using keyboard shortcut F8 or the ‘search icon’ in the toolbar at the top of the screen</li> 
+	<li>If more than one person is displayed, select the member of staff whose record you are editing</li> 
+	<li>If more than one prison is displayed, select the correct prison(s) for the member of staff</li>
+	<li>Go to the ‘staff member position/roles/schedules’ section </li>
+	<li>Add a new line if there is already a position and role for this member of staff</li>
+	<li>Under ‘position’ choose either PRO (Prison Officer) or PO (Probation Officer) </li>
+	<li>Under ‘role’ select POM </li>
+	<li>Under ‘schedule type’ select ‘full-time’ or ‘part-time’ </li>
+	<li>Save the changes by clicking keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen </li>
+</ul>
+
+
+<h2>b) Check all email addresses are up to date in NOMIS </h2>
+
+<p> POMs email addresses stored in NOMIS need to be up to date. That’s because the new service will send an email to let POMs know when they have been allocated to a prisoner. You should use the most up to date ‘name@justice.gov.uk’ email address. </p>
+
+<img src="image 2"> 
+
+<ul>
+	<li>Go to ‘Utilities’ then ‘User/system security’ then ‘Maintain staff records’</li> 
+	<li>Enter the staff member’s name, then click the blue arrow or keyboard shortcut ‘F8’ to search</li> 
+	<li>If more than one person is displayed, select the member of staff whose record you are editing</li> 
+	<li>Check the email address listed under ‘global emails’ and update (or add it) if you need to</li>
+	<li>Save the changes by pressing keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</li>
+</ul> 
+
+
+<p> Let the SPO know when this task has been completed, so that they can start task 3. </p> 
