--- a/app/views/pages/help_step3.html.erb
+++ b/app/views/pages/help_step3.html.erb
@@ -1,1 +1,14 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help - Step 3</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">SPO task: Update POM profiles</h1>
+
+<p>Please note: This task can’t be started until task 2 has been completed</p> 
+
+<p> You need to update POMs working patterns and availability in the new allocations service before you can start allocating cases.</p>  
+
+<p>Sign in to <a href="https://moic.service.justice.gov.uk">https://moic.service.justice.gov.uk</a> and follow these steps: 
+
+<ul>
+	<li>go to ‘view all offender managers’ under ‘manage staff’</li> 
+	<li>choose a POM from the list and select ‘view’</li> 
+	<li>on the POM profile page, select ‘edit’ </li>
+	<li>set the working pattern and availability and save changes</li>
+</ul>
