secondary allocations on history page

--- a/app/views/allocations/_deallocate_pom.html.erb
+++ b/app/views/allocations/_deallocate_pom.html.erb
@@ -1,5 +1,5 @@
 <li class="action_needed">
-  <h2 class="govuk-heading-s">Prisoner unallocated
+  <h2 class="govuk-heading-s"><%= allocation_type %> unallocated
     <% if allocation.event_trigger == 'offender_transferred' %>
         (transfer)
     <% end %>
