--- a/app/views/allocations/_allocate_pom.html.erb
+++ b/app/views/allocations/_allocate_pom.html.erb
@@ -1,8 +1,8 @@
 <li class="action_needed">
-  <h2 class="govuk-heading-s">Prisoner allocation</h2>
-<p>Prisoner allocated to <%= allocation.primary_pom_name.titleize %>
-  <% unless @pom_emails[allocation.primary_pom_nomis_id].nil? %>
-    - <%= mail_to(@pom_emails[allocation.primary_pom_nomis_id]) %>
+  <h2 class="govuk-heading-s"><%= allocation_type %> allocation</h2>
+<p>Prisoner allocated to <%= pom_name.titleize %>
+  <% unless @pom_emails[pom_nomis_id].nil? %>
+    - <%= mail_to(@pom_emails[pom_nomis_id]) %>
   <% end %>
   <br/>
   Tier: <%= allocation.allocated_at_tier %></p>
