--- a/app/views/allocations/_reallocate_primary_pom.html.erb
+++ b/app/views/allocations/_reallocate_primary_pom.html.erb
@@ -1,8 +1,8 @@
 <li class="action_needed">
   <h2 class="govuk-heading-s">Prisoner reallocated</h2>
-  <p>Prisoner reallocated to <%= allocation.primary_pom_name.titleize %>
-    <% unless @pom_emails[allocation.primary_pom_nomis_id].nil? %>
-      - <%= mail_to(@pom_emails[allocation.primary_pom_nomis_id]) %>
+  <p>Prisoner reallocated to <%= pom_name.titleize %>
+    <% unless @pom_emails[pom_nomis_id].nil? %>
+      - <%= mail_to(@pom_emails[pom_nomis_id]) %>
     <% end %>
     <br/>
     Tier: <%= allocation.allocated_at_tier %>
