--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -10,11 +10,25 @@
         <ul>
           <% allocations.each do |allocation| %>
             <% if allocation.event == 'allocate_primary_pom' %>
-              <%= render :partial => "allocate_primary_pom", :locals => { allocation: allocation } %>
+              <%= render :partial => "allocate_pom",
+                         :locals => { allocation: allocation, allocation_type: 'Prisoner',
+                                      pom_name: allocation.primary_pom_name,
+                                      pom_nomis_id: allocation.primary_pom_nomis_id } %>
             <% elsif allocation.event == 'reallocate_primary_pom' %>
-              <%= render :partial => "reallocate_primary_pom", :locals => { allocation: allocation } %>
+              <%= render :partial => "reallocate_primary_pom",
+                         :locals => { allocation: allocation, pom_name: allocation.primary_pom_name,
+                                      pom_nomis_id: allocation.primary_pom_nomis_id} %>
+            <% elsif allocation.event == 'allocate_secondary_pom' %>
+              <%= render :partial => "allocate_pom",
+                         :locals => { allocation: allocation, allocation_type: 'Co-working',
+                                      pom_name: allocation.secondary_pom_name,
+                                      pom_nomis_id: allocation.secondary_pom_nomis_id} %>
             <% elsif allocation.event == 'deallocate_primary_pom' %>
-              <%= render :partial => "deallocate_primary_pom", :locals => { allocation: allocation } %>
+              <%= render :partial => "deallocate_pom",
+                         :locals => { allocation: allocation, allocation_type: 'Prisoner' } %>
+            <% elsif allocation.event == 'deallocate_secondary_pom' %>
+              <%= render :partial => "deallocate_pom",
+                         :locals => { allocation: allocation, allocation_type: 'Co-working' } %>
             <% end %>
           <% end %>
         </ul>
