integration of co-working, including delete route

--- a/app/views/coworking/confirm.html.erb
+++ b/app/views/coworking/confirm.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_tag(prison_coworking_path(@prison), method: :post, id: "confirm_coworking_allocation_form") do %>
+    <%= form_tag(prison_coworking_index_path(@prison), method: :post, id: "confirm_coworking_allocation_form") do %>
       <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Confirm co-working allocation</h1>
       <p class="govuk-body">You are allocating <%= "#{@secondary_pom.first_name} #{@secondary_pom.last_name}".titleize %> to work with <%= "#{@primary_pom.first_name} #{@primary_pom.last_name}".titleize %> on <%= "#{@prisoner.first_name} #{@prisoner.last_name}".titleize %></p>
       <% if @secondary_pom.emails.empty? %>
@@ -16,13 +16,10 @@
         <span id="message_hint" class="govuk-hint">For example, you can tell the prison offender manager about any special requirements.</span>
         <textarea class="govuk-textarea" id="message" name="coworking_allocations[message]]" rows="3" aria-describedby="message"></textarea>
       </div>
-      <%= hidden_field_tag("allocations[nomis_offender_id]", @prisoner.offender_no) %>
-      <%= hidden_field_tag("allocations[nomis_staff_id]", @secondary_pom.staff_id) %>
-      <%= hidden_field_tag("allocations[event]", @event) %>
-      <%= hidden_field_tag("allocations[event_trigger]", @event_trigger) %>
+      <%= hidden_field_tag("coworking_allocations[nomis_offender_id]", @prisoner.offender_no) %>
+      <%= hidden_field_tag("coworking_allocations[nomis_staff_id]", @secondary_pom.staff_id) %>
       <%= submit_tag "Complete allocation", role: "button", draggable: "false", class: "govuk-button" %>
       <a class="govuk-link cancel-button" href="<%= new_prison_coworking_path(@prison, @prisoner.offender_no) %>">Cancel</a>
     <% end %>
-
   </div>
 </div>
