--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -133,15 +133,16 @@
         <%= link_to 'Reallocate', edit_prison_allocation_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
       </td>
     </tr>
-    <tr class="govuk-table__row">
+    <tr class="govuk-table__row" id="co-working-pom">
       <td class="govuk-table__cell govuk-!-width-one-half">Co-working POM</td>
       <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half">
         <% if @coworker.nil? %>
           N/A
+          <%= link_to 'Allocate', new_prison_coworking_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
         <% else %>
-        <%= link_to @coworker.full_name, prison_pom_path(@prison, @coworker.staff_id), class: "govuk-link" %>
+          <%= link_to @coworker.full_name, prison_pom_path(@prison, @coworker.staff_id), class: "govuk-link" %>
+          <%= link_to 'Deallocate', prison_coworking_path(@prison, @prisoner.offender_no), method: :delete, class: "govuk-link pull-right" %>
         <% end %>
-        <%= link_to 'Allocate', new_prison_coworking_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
       </td>
     </tr>
     <% if Flipflop.link_allocation_info? %>
