Updated list of steps
Added new step on summary page

--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -12,7 +12,8 @@
 
 (LINKS?) 
 Task 1: Senior Probation Officer (SPO) 
-Task 2: Local System Administrator 
+Task 2: Local System Administrator (LSA)
+Task 3: Local System Administrator (LSA)
 Task 3: Senior Probation Officer (SPO) / Case admin 
 Task 4: Senior Probation Officer (SPO) / Case admin 
 Task 5: Senior Probation Officer (SPO) 
