--- a/app/views/pages/help_step06.html.erb
+++ b/app/views/pages/help_step06.html.erb
@@ -15,4 +15,8 @@
 
 <p> The POM will receive an email to let them know about the allocation. </p>
 
+<h2> Tell us what you think </h2>
 
+<p>Your feedback is extremely valuable. It’ll help us make changes and improve things.</p>
+
+<p>For feedback and any questions about our service, please email us on <a href="mailto:moic@digital.justice.gov.uk">moic@digital.justice.gov.uk</a> </p>
