Initial start to the help pages
 - The content has been added
 - Minimal styling
 - No images included

--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,7 +1,29 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help</h1>
+<%= render :partial => "content" %>
 
-<div class="govuk-grid-row dashboard-row">
-  <div class="govuk-grid-column-two-thirds">
-  Help
+<div class="govuk-grid-column">
+  <h1 class="govuk-heading-l govuk-!-margin-top-5">Get started with the allocations service</h1>
+
+  <div class="govuk-body">
+
+    <p>You will be able to allocate prison offender managers to prisoners using the new allocations service.</p>
+
+    <p>There are a few tasks that need to be completed before you can start making allocations.
+      These need to be completed in the order that they are described in this guide.</p>
+
+    <p>You will need to work together to complete the set-up.</p>
+
+    <ul>
+      <li>Task 1: Senior Probation Officer (SPO) </li>
+      <li>Task 2: Local System Administrator </li>
+      <li>Task 3: Local System Administrator</li>
+      <li>Task 4: Senior Probation Officer (SPO) / Case admin</li>
+      <li>Task 5: Senior Probation Officer (SPO) / Case admin</li>
+      <li>Task 6: Senior Probation Officer (SPO)</li>
+    </ul>
+
+    <p>When you are set up, use Firefox to sign in to the service using your NOMIS ID
+        and password at:
+      <a href="https://moic.service.justice.gov.uk" class="govuk-link"> https://moic.service.justice.gov.uk</a>
+    </p>
   </div>
 </div>
