--- a/app/views/pages/help_step2.html.erb
+++ b/app/views/pages/help_step2.html.erb
@@ -1,1 +1,46 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help - Step 2</h1>
+<%= render :partial => "content" %>
+
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Set up access in Digital Prison Services</h1>
+
+<div class="govuk-grid-column">
+  <div class="govuk-body">
+    <p>
+      All SPOs, OMU case admin staff and POMs need to have the right roles
+      assigned to them in order to access the allocations service.
+    </p>
+
+    <p>Sign in to Digital Prison Services using this URL:
+      <a href="https://notm.service.hmpps.dsd.io/" class="govuk-link"> https://notm.service.hmpps.dsd.io/</a>
+    </p>
+
+    <p>[Image of signon here]</p>
+
+    <p>Select ‘Admin and utilities’</p>
+
+    <p>[Image of Prison NOMIS here]</p>
+
+    <p>Select ‘Manage access roles’</p>
+
+    <p>[Image of Admin & Utilities here]</p>
+
+    <p>Search for the staff member you want to set up by entering their user ID</p>
+
+    <p>[Image of staff search function here]</p>
+
+    <p>When you have found the staff member, click ‘Edit’</p>
+
+    <p>[Image of staff member here]</p>
+
+    <p>Click ‘Add role’</p>
+
+    <p>[Image of adding role here]</p>
+
+    <p>Click the ‘Choose new role’ to see a list of available user roles</p>
+
+    <p>[Image of chose new role here]</p>
+
+    <p>Senior Probation Officers and Case Admins need to have the ‘Allocation manager’ role added</p>
+
+    <p>Prison Offender Managers need to have the ‘Allocation case manager’ role added</p>
+  </div>
+</div>
