--- a/app/views/pages/help_step1.html.erb
+++ b/app/views/pages/help_step1.html.erb
@@ -1,1 +1,36 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help - Step 1</h1>
+<%= render :partial => "content" %>
+
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">List everyone using the service</h1>
+
+<div class="govuk-grid-column">
+  <div class="govuk-body">
+    <p>We need the names and job roles of everyone using the service. This usually includes:</p>
+
+    <ul class="govuk-list--bullet">
+      <li>Senior probation officers (SPOs)</li>
+      <li>Prison offender managers (POMs)</li>
+      <li>Case admin staff in the Offender Management Unit</li>
+      <li>Local System Admin (LSA)</li>
+    </ul>
+
+    <p>We also need the email addresses and working pattern for all prison offender managers.</p>
+
+    <p>We have put together a spreadsheet template you can use to gather this information
+      (attached to the email).</p>
+
+    <p>[Image of spreadsheet cells here]</p>
+
+    <p>Send the information to the allocations team</p>
+
+    <p>Send the names, roles and email addresses to: <%= mail_to("hmoic@digital.justice.gov.uk")%></p>
+
+    <p>We will give everyone access to the new service and let you know when this has been done.</p>
+
+    <p>Share the information with the Local System Administrator (LSA)</p>
+
+    <p>You need to send the same list of names, roles and, (for POMs only),
+      email addresses to the LSA so that they can complete task 2.</p>
+
+    <p>They will also need a copy of this guide.</p>
+  </div>
+</div>
