--- a/app/views/pages/help_step3.html.erb
+++ b/app/views/pages/help_step3.html.erb
@@ -1,1 +1,52 @@
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help - Step 3</h1>
+<%= render :partial => "content" %>
+
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Set up POMs in NOMIS</h1>
+<div class="govuk-grid-column">
+  <div class="govuk-body">
+    <p>Please note: This task can’t be started until task 1 has been completed</p>
+
+    <p>a) Make sure POMs have the right ‘roles’ assigned in NOMIS</p>
+
+    <p>All POMs need to have a new staff role added in NOMIS.</p>
+    <p>This will add them to the list of POMs in the new service.</p>
+
+    <p>[Image of Caseload screen here]</p>
+
+    <p>Go to ‘Utilities’ then ‘User/system security’ then ‘Maintain staff member agency location activity’</p>
+    <p>Enter the staff member’s name, then click the blue arrow by their name</p>
+
+    <p>[Image of search type here]</p>
+
+    <p>Search using keyboard shortcut F8 or the ‘search icon’ in the toolbar at the top of the screen</p>
+    <p>If more than one person is displayed, select the member of staff whose record you are editing</p>
+    <p>If more than one prison is displayed, select the correct prison(s) for the member of staff</p>
+    <p>Go to the ‘staff member position/roles/schedules’ section</p>
+    <p>Add a new line if there is already a position and role for this member of staff</p>
+    <p>Under ‘position’ choose either PRO (Prison Officer) or PO (Probation Officer)</p>
+    <p>Under ‘role’ select POM</p>
+    <p>Under ‘schedule type’ select ‘full-time’ or ‘part-time’</p>
+    <p>Save the changes by clicking keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</p>
+
+    <p>[Image of Action toolbar here]</p>
+
+    <p>b) Check all email addresses are up to date in NOMIS</p>
+
+    <p>POMs email addresses stored in NOMIS need to be up to date. That’s because the
+  new service will send an email to let POMs know when they have been allocated to a prisoner.
+      You should use the most up to date ‘name@justice.gov.uk’ email address.</p>
+
+    <p>[Image of Caseload here]</p>
+
+    <p>Go to ‘Utilities’ then ‘User/system security’ then ‘Maintain staff records’</p>
+    <p>Enter the staff member’s name, then click the blue arrow or keyboard shortcut ‘F8’ to search</p>
+
+    <p>[Image of search type]</p>
+
+    <p>If more than one person is displayed, select the member of staff whose record you are editing</p>
+    <p>Check the email address listed under ‘global emails’ and update (or add it) if you need to</p>
+    <p>Save the changes by pressing keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</p>
+
+
+    <p>Let the SPO know when this task has been completed, so that they can start task 3.</p>
+  </div>
+</div>
