--- a/app/views/allocations/_allocate_primary_pom.html.erb
+++ b/app/views/allocations/_allocate_primary_pom.html.erb
@@ -1,5 +1,5 @@
 <li class="action_needed">
-  <h2 class="govuk-heading-s"><%= allocation_type %> allocation</h2>
+  <h2 class="govuk-heading-s">Prisoner allocation</h2>
 <p>Prisoner allocated to <%= pom_name.titleize %>
   - <%= format_email(@pom_emails[pom_nomis_id]) %>
   <br/>
