--- a/app/views/coworking/confirm_removal.html.erb
+++ b/app/views/coworking/confirm_removal.html.erb
@@ -4,11 +4,17 @@
   <%= render :partial => "/shared/validation_errors", :locals => { :errors => @errors } %>
 <% end %>
 
+<p class="govuk-body">
 You are removing <%= @allocation.secondary_pom_name %> from co-working POM <%= @allocation.primary_pom_name %>
+</p>
 
+<p class="govuk-body">
 We will send a confirmation email to <%= @primary_pom.emails.first %>
+</p>
 
-Do you want to allocate this prisoner to a new co-working POM?
+<p class="govuk-body">
+  <b>Do you want to allocate this prisoner to a new co-working POM?</b>
+</p>
 
 <%= form_tag(prison_coworking_path(@prison, @prisoner.offender_no), method: :delete) do %>
   <div class='govuk-!-margin-top-6'>
