--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,8 +1,8 @@
-<%= render :partial => "content" %>
+<%= render :partial => "content", locals: { page: 0 } %>
+
+<h1 class="govuk-heading-l govuk-!-margin-top-5">Get started with the allocations service</h1>
 
 <div class="govuk-grid-column">
-  <h1 class="govuk-heading-l govuk-!-margin-top-5">Get started with the allocations service</h1>
-
   <div class="govuk-body">
 
     <p>You will be able to allocate prison offender managers to prisoners using the new allocations service.</p>
@@ -23,7 +23,7 @@
 
     <p>When you are set up, use Firefox to sign in to the service using your NOMIS ID
         and password at:
-      <a href="https://moic.service.justice.gov.uk" class="govuk-link"> https://moic.service.justice.gov.uk</a>
+      <%= link_to("https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk") %>
     </p>
   </div>
 </div>
