--- a/app/views/pages/help_step1.html.erb
+++ b/app/views/pages/help_step1.html.erb
@@ -1,9 +1,10 @@
-<%= render :partial => "content" %>
+<%= render :partial => "content", locals: { page: 1 }%>
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">List everyone using the service</h1>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
+
     <p>We need the names and job roles of everyone using the service. This usually includes:</p>
 
     <ul class="govuk-list--bullet">
@@ -15,10 +16,9 @@
 
     <p>We also need the email addresses and working pattern for all prison offender managers.</p>
 
-    <p>We have put together a spreadsheet template you can use to gather this information
-      (attached to the email).</p>
+    <p>We have put together a <%= link_to("spreadsheet template", "https://drive.google.com/open?id=1wfKrP1RtuwZ_YCjmj3gljGKGIYlVd-IdvFvvdtwBduA") %> you can use to gather this information.</p>
 
-    <p>[Image of spreadsheet cells here]</p>
+    <p><%=image_tag("spreadsheet_image.png") %></p>
 
     <p>Send the information to the allocations team</p>
 
@@ -29,8 +29,9 @@
     <p>Share the information with the Local System Administrator (LSA)</p>
 
     <p>You need to send the same list of names, roles and, (for POMs only),
-      email addresses to the LSA so that they can complete task 2.</p>
+      email addresses to the LSA so that they can complete
+      <%= link_to "task 2", "help_step2" %>.</p>
 
-    <p>They will also need a copy of this guide.</p>
+    <p>They will also need access to this guide.</p>
   </div>
 </div>
