--- a/app/views/pages/help_step3.html.erb
+++ b/app/views/pages/help_step3.html.erb
@@ -1,21 +1,29 @@
-<%= render :partial => "content" %>
+<%= render :partial => "content", locals: { page: 3 } %>
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Set up POMs in NOMIS</h1>
+
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <p>Please note: This task can’t be started until task 1 has been completed</p>
+
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        Please note: This task can’t be started until task 1 has been completed
+      </strong>
+    </div>
 
     <p>a) Make sure POMs have the right ‘roles’ assigned in NOMIS</p>
 
     <p>All POMs need to have a new staff role added in NOMIS.</p>
     <p>This will add them to the list of POMs in the new service.</p>
 
-    <p>[Image of Caseload screen here]</p>
+    <p><%=image_tag("caseload2_image.png") %></p>
 
     <p>Go to ‘Utilities’ then ‘User/system security’ then ‘Maintain staff member agency location activity’</p>
     <p>Enter the staff member’s name, then click the blue arrow by their name</p>
 
-    <p>[Image of search type here]</p>
+    <p><%=image_tag("search_box_image.png") %></p>
 
     <p>Search using keyboard shortcut F8 or the ‘search icon’ in the toolbar at the top of the screen</p>
     <p>If more than one person is displayed, select the member of staff whose record you are editing</p>
@@ -27,26 +35,26 @@
     <p>Under ‘schedule type’ select ‘full-time’ or ‘part-time’</p>
     <p>Save the changes by clicking keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</p>
 
-    <p>[Image of Action toolbar here]</p>
+    <p><%=image_tag("action_toolbar_image.png") %></p>
 
     <p>b) Check all email addresses are up to date in NOMIS</p>
 
     <p>POMs email addresses stored in NOMIS need to be up to date. That’s because the
-  new service will send an email to let POMs know when they have been allocated to a prisoner.
+      new service will send an email to let POMs know when they have been allocated to a prisoner.
       You should use the most up to date ‘name@justice.gov.uk’ email address.</p>
 
-    <p>[Image of Caseload here]</p>
+    <p><%=image_tag("caseload1_image.png") %></p>
 
     <p>Go to ‘Utilities’ then ‘User/system security’ then ‘Maintain staff records’</p>
     <p>Enter the staff member’s name, then click the blue arrow or keyboard shortcut ‘F8’ to search</p>
 
-    <p>[Image of search type]</p>
+    <p><%=image_tag("search_box_image.png") %></p>
 
     <p>If more than one person is displayed, select the member of staff whose record you are editing</p>
     <p>Check the email address listed under ‘global emails’ and update (or add it) if you need to</p>
     <p>Save the changes by pressing keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</p>
 
 
-    <p>Let the SPO know when this task has been completed, so that they can start task 3.</p>
+    <p>Let the SPO know when this task has been completed, so that they can start <%= link_to "task 4", "help_step4" %>.</p>
   </div>
 </div>
