--- a/app/views/pages/help_step5.html.erb
+++ b/app/views/pages/help_step5.html.erb
@@ -1,9 +1,17 @@
-<%= render :partial => "content" %>
+<%= render :partial => "content", locals: { page: 5 } %>
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Update prisoner information</h1>
+
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <p>Please note: This task can’t be started until task 3 has been completed</p>
+
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        Please note: This task can’t be started until task 3 has been completed
+      </strong>
+    </div>
 
 
     <p>You will need to update information about some prisoners in the allocations
@@ -17,7 +25,7 @@
       <li>Whether the prisoner has a Welsh address (this is because Wales is piloting the new OMiC policy before it is rolled out across England)</li>
     </ul>
 
-    <p>Sign in to <a href="https://moic.service.justice.gov.uk" class="govuk-link">https://moic.service.justice.gov.uk</a> and follow these steps:</p>
+    <p>Sign in to <%= link_to("https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk") %> and follow these steps:</p>
 
     <ul>
       <li>go to ‘update case information’</li>
