Change help pages to Guidance pages
Rename help pages to guidance
Add useful links to footer

--- a/app/views/pages/guidance_step1.html.erb
+++ b/app/views/pages/guidance_step1.html.erb
@@ -30,7 +30,7 @@
 
     <p>You need to send the same list of names, roles and, (for POMs only),
       email addresses to the LSA so that they can complete
-      <%= link_to "task 2", "help_step2" %>.</p>
+      <%= link_to "task 2", "guidance_step2" %>.</p>
 
     <p>They will also need access to this guide.</p>
   </div>
