--- a/app/views/pages/guidance_step3.html.erb
+++ b/app/views/pages/guidance_step3.html.erb
@@ -55,6 +55,6 @@
     <p>Save the changes by pressing keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</p>
 
 
-    <p>Let the SPO know when this task has been completed, so that they can start <%= link_to "task 4", "help_step4" %>.</p>
+    <p>Let the SPO know when this task has been completed, so that they can start <%= link_to "task 4", "guidance_step4" %>.</p>
   </div>
 </div>
